# monad

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  devenv.nix  hello.mo  init.mo  rustfmt.toml
.github/workflows/: mdbook.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: eval.rs  lib.rs  main.rs  parser.rs  term.rs
core/src/eval/: constraint.rs  macro_expand.rs  macro_test.rs  native.rs  test.rs  type.rs
core/src/parser/: error.rs  locate.rs  string.rs  test.rs
core/src/term/: module.rs  test.rs
core/src/term/module/: test.rs
docs/src/: SUMMARY.md  dependent-types.md  error-handling.md  getting-started.md  inductive-types.md  instances.md  introduction.md  io-monad.md  linear-types.md  modules.md  reference.md  structs-enums.md  type-classes.md
examples/: do_block.mo  hello.mo  structs.mo  test.mo  tests.mo
init/: init.mo  io.mo  math.mo  number.mo  parser.mo  prelude.mo  string.mo  term.mo  test_constraints.mo  tests.mo
llvm-codegen/: Cargo.toml
llvm-codegen/src/: compiler.rs  lib.rs
llvm-codegen/src/codegen/: constructors.rs  context.rs  control.rs  lambda.rs  literals.rs  mod.rs  native.rs  term.rs
llvm-codegen/src/ir/: function.rs  mod.rs  module.rs  types.rs  value.rs
llvm-codegen/src/runtime/: mod.rs
llvm-codegen/tests/: codegen_tests.rs
src/: eval.rs  lib.rs  main.rs  parser.rs  prelude.mo  term.rs
src/eval/: native.rs  test.rs
src/parser/: error.rs  locate.rs
src/term/: module.rs  test.rs
std/: test.mo
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/web/: README.md  examples.json  index.html  main.js  style.css
