[package]
name = "monad-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "monad"
path = "src/main.rs"

[dependencies]
monad-core = { path = "../core" }
monad-llvm-codegen = { path = "../llvm-codegen", optional = true }
clap = { version = "4", features = ["derive"] }
rustyline = { version = "17.0.2", optional = true }

[features]
default = ["repl", "llvm"]
repl = ["dep:rustyline", "monad-core/repl"]
llvm = ["dep:monad-llvm-codegen"]
