[package]
name = "monad-llvm-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
monad-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[[test]]
name = "codegen_tests"
path = "tests/codegen_tests.rs"
