[package]
name = "monad-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["monad-core/console_error_panic_hook"]

[dependencies]
monad-core = { path = "../core", default-features = false, features = ["console_error_panic_hook"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
thiserror.workspace = true
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
